[package]
name = "ton-kafka-producer"
version = "0.2.0"
edition = "2021"
license-file = "LICENSE"
authors = ["Broxus team"]

[dependencies]
anyhow = "1.0"
argh = "0.1"
async-trait = "0.1"
atty = "0.2.14"
base64 = "0.21.0"
bincode = "1.3.3"
broxus-util = { version = "0.2.2", features = ["alloc", "alloc-profiling", "public-ip", "signal"] }
bytes = "1.2.1"
chrono = "0.4.22"
config = { version = "0.13", default-features = false, features = ["yaml"] }
countme = { version = "3.0.0", features = ["enable"] }

everscale-jrpc-server = { git = "https://github.com/broxus/everscale-jrpc.git", default-features = false }
everscale-network = "0.5.0"
futures-util = "0.3"
hex = "0.4"
indicatif = "0.17"
is-terminal = "0.4.7"
once_cell = "1.14"
parking_lot = { version = "0.12.0", features = ["hardware-lock-elision"] }
pomfrit = "0.1"
rand = "0.8"
reqwest = { version = "0.11.10", features = ['json'] }
rdkafka = { version = "0.29.0", features = ["tokio"] }
rustc-hash = "1.1.0"



rocksdb = { version = "0.20.1", features = [
    "multi-threaded-cf",
    "zstd",
    "lz4",
    "jemalloc",
], default-features = false }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
schnellru = "0.2.1"
thiserror = "1.0"
tokio = { version = "1", features = ["full", "parking_lot"] }

# TON specific dependencies
ton_block = { git = "https://github.com/broxus/ton-labs-block" }
ton-block-compressor = { git = "https://github.com/broxus/ton-block-compressor.git" }
ton_block_json = { git = "https://github.com/broxus/ton-labs-block-json" }
ton_types = { git = "https://github.com/broxus/ton-labs-types" }

ton-indexer = { git = "https://github.com/broxus/ton-indexer.git", features = [
    "count-cells",
    "archive-uploader",
] }
archive-downloader = { git = "https://github.com/broxus/ton-indexer.git" }
tracing = "0.1.34"
tracing-subscriber = {version = "0.3", features = ["env-filter"]}

[dev-dependencies]
cargo-husky = { version = "1", features = ["run-cargo-clippy", "run-cargo-fmt"] }

[features]
default = ["sasl"]
sasl = ["rdkafka/sasl"]

[package.metadata.deb]
depends = "libstdc++6[amd64]"
section = "utility"
assets = [["target/release/ton-kafka-producer", "/usr/local/bin/ton-kafka-producer", "755"]]
conf-files = ["/etc/ton-kafka-producer/"]
maintainer-scripts = "contrib/"

[package.metadata.deb.systemd-units]
unit-scripts = "contrib/"

[patch."https://github.com/broxus/ton-labs-block.git"]
ton_block = { git = "https://www.github.com/broxus/ton-labs-block.git", branch = "old" }

[patch."https://github.com/broxus/ton-labs-block-json.git"]
ton_block_json = { git = "https://www.github.com/broxus/ton-labs-block-json.git", branch = "old" }

[patch."https://github.com/broxus/ton-labs-types.git"]
ton_types = { git = "https://www.github.com/broxus/ton-labs-types.git", branch = "old" }