[package]
name = "ton-kafka-producer"
version = "0.2.4"
edition = "2021"
rust-version = "1.68.2"
license-file = "LICENSE"
authors = ["Broxus team"]

[dependencies]
anyhow = "1.0"
argh = "0.1"
async-trait = "0.1"
base64 = "0.13"
broxus-util = { version = "0.2", features = [
    "argh",
    "alloc",
    "alloc-profiling",
    "public-ip",
    "signal",
    "config",
], default-features = false }
bytes = "1.2.1"
chrono = "0.4.22"
config = { version = "0.13", default-features = false, features = ["yaml"] }
countme = { version = "3.0.0", features = ["enable"] }

everscale-jrpc-server = { git = "https://github.com/broxus/everscale-jrpc.git", default-features = false }
everscale-network = "0.5"
futures-util = "0.3"
hex = "0.4"
indicatif = "0.17"
is-terminal = "0.4"
once_cell = "1.14"
pomfrit = "0.1"
rand = "0.8"
rdkafka = { version = "0.31.0", features = ["ssl-vendored", "tokio"] }
rustc-hash = "1.1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
thiserror = "1.0"
tokio = { version = "1", features = ["full", "parking_lot"] }

# TON specific dependencies
ton_block = { git = "https://github.com/broxus/ton-labs-block" }
ton-block-compressor = { git = "https://github.com/broxus/ton-block-compressor.git" }
ton_types = { git = "https://github.com/broxus/ton-labs-types" }

ton_block_json = { git = "https://github.com/broxus/ton-labs-block-json" }

ton-indexer = { git = "https://github.com/broxus/ton-indexer.git", features = [
    "count-cells",
    "archive-uploader",
] }
archive-downloader = { git = "https://github.com/broxus/ton-indexer.git" }
tracing = "0.1.34"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
bytesize = "1.2.0"

[dev-dependencies]
cargo-husky = { version = "1", features = ["run-cargo-clippy", "run-cargo-fmt"] }

[features]
default = ["sasl"]
sasl = ["rdkafka/sasl"]

[package.metadata.deb]
depends = "libstdc++6[amd64]"
section = "utility"
assets = [["target/release/ton-kafka-producer", "/usr/local/bin/ton-kafka-producer", "755"]]
conf-files = ["/etc/ton-kafka-producer/"]
maintainer-scripts = "contrib/"

[package.metadata.deb.systemd-units]
unit-scripts = "contrib/"
